# gen-systemd-svcs

./: Cargo.toml
src/: main.rs
