[package]
name = "gen-systemd-svcs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.193", features = ["std", "derive"] }
serde_yaml = "0.9.29"
